미디어 쿼리 작성 1. @media 2. @content

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,1 +1,13 @@
-// index.scss
+@use "./utils/media-query" as *;
+
+body {
+  background: yellow;
+
+  @include mobile{
+    background: pink;
+  };
+
+  @include desktop{
+    background: skyblue;
+  };
+}
