--- a/src/scss/utils/_media-query.scss
+++ b/src/scss/utils/_media-query.scss
@@ -1,1 +1,16 @@
-// media-query.scss
+// 미디어쿼리 믹스인
+$break: 768px;
+
+// @mixin & @media - 변수로 바로 연산
+// @content 사용
+@mixin mobile {
+  @media (max-width: #{$break - 1}) {
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media (min-width: $break) {
+    @content;
+  }
+}
