--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,3 +1,15 @@
-
+body {
+  background: yellow;
+}
+@media (max-width: 767px) {
+  body {
+    background: pink;
+  }
+}
+@media (min-width: 768px) {
+  body {
+    background: skyblue;
+  }
+}
 
 /*# sourceMappingURL=index.css.map */
