@function & @return - 내장모듈: @use "sass:math"; - 단위 제거 함수 작성

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,8 +1,8 @@
-@use "./utils/media-query" as *;
+@use "./utils" as *;
 
 body {
+  width: removeUnit(100px);
   background: yellow;
-
   @include mobile{
     background: pink;
   };
