@function - px을 rem 단위로 변경하는 함수

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,7 +1,7 @@
 @use "./utils" as *;
 
 body {
-  width: removeUnit(100px);
+  width: rem(240px);
   background: yellow;
   @include mobile{
     background: pink;
