--- a/src/scss/utils/_unit.scss
+++ b/src/scss/utils/_unit.scss
@@ -15,7 +15,9 @@ $rootUnit: 16px !default;
 
 // px을 rem 단위로 변경하는 함수 ------------------------------------------------------- /
 @function rem($value, $base: $rootUnit) {
-  // $removeValue: removeUnit($value);
-  // $removeBase: removeUnit($base);
-  // @return math.div($removeValue, $removeBase) * 1rem;
+  $removeValue: removeUnit($value);
+  $removeBase: removeUnit($base);
+  @return math.div($removeValue, $removeBase) * 1rem;
 }
+
+// em 단위 변경 코드 참조 - 훨씬 간단
