appHeader 부분 작성 - color 파일 추가 - mobile 적용

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,1 +1,11 @@
-// header.scss
+@use "./../utils" as *;
+
+.appHeader {
+  background: yellow;
+  padding: rem(16px) rem(24px);
+
+  @include mobile {
+    background: $dark-brown;
+    color: $white;
+  }
+}
