--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -9,3 +9,15 @@
     color: $white;
   }
 }
+
+//로고
+// src = 루트 경로 /
+.logo {
+  width: rem(204px);
+  height: rem(60px);
+  &__link {
+    display: block;
+    height: 100%;
+    background: url(/assets/images/webcafe-logo.png) no-repeat;
+  }
+}
