flex를 활용한 멤버 서비스 레이아웃 + default 초기화 파일 추가

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -21,3 +21,9 @@
     background: url(/assets/images/webcafe-logo.png) no-repeat;
   }
 }
+
+// 멤버 서비스
+.memberOnly{
+  background: green;
+  @include flexbox ($justify: flex-end);
+}
