숨긴 콘텐츠 처리 - mixin을 통해 지정하면 좋은점

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -27,3 +27,8 @@
   background: green;
   @include flexbox ($justify: flex-end);
 }
+
+// 크래스를 따로 작성하지 않아도 mixin을 통해 적용할 수 있도록
+.memberOnly li:last-child {
+  @include a11yHidden;
+}
