--- a/src/scss/utils/_index.scss
+++ b/src/scss/utils/_index.scss
@@ -1,5 +1,7 @@
-// forward 처리
+// forwarding 처리
+@forward "a11y";
 @forward "color";
 @forward "media-query";
 @forward "unit";
 @forward "flexbox";
+@forward "mixin";
