--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,18 +2,19 @@
 @use "./../components" as *;
 
 .appHeader {
-  background: yellow;
   padding: rem(16px) rem(24px);
+  @include flexbox(column);
+  gap: rem(16px);
 
   @include mobile {
     background: $dark-brown;
     color: $white;
-
-    @include flexbox($direction: column);
   }
 
   @include desktop {
-    position: relative;
+    position: relative;   
+    @include containerMax;
+    @include autoMargin;
   }
 }
 
@@ -36,7 +37,6 @@
 
 // 멤버 서비스
 .memberOnly {
-  background: green;
   @include flexbox ($justify: flex-end);
 
   @include mobile {
@@ -60,7 +60,7 @@
 
     @include desktop {
       .formInput {
-        width: rem(460px);
+        width: rem(400px);
       }
     }
   }
