--- a/src/scss/utils/_mixin.scss
+++ b/src/scss/utils/_mixin.scss
@@ -1,12 +1,54 @@
 @use "./../utils/unit" as *;
 
+// 포지션 관련 믹스인
 @mixin posCenter {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
 }
 
+@mixin containerMax($max-width: 1024px) {
+  max-width: rem($max-width);
+  @include autoMargin;
+}
+
+
+// padding, margin 관련 믹스인
+@mixin padding($spacing) {
+  @include paddingX;
+  @include paddingY;
+}
+
 @mixin paddingX($spacing) {
   padding-left: rem($spacing);
   padding-right: rem($spacing);
+}
+
+@mixin paddingY($spacing) {
+  padding-top: rem($spacing);
+  padding-bottom: rem($spacing);
+}
+
+@mixin padding($spacing) {
+  padding: rem($spacing);
+}
+
+@mixin marginX($spacing) {
+  margin-left: rem($spacing);
+  margin-right: rem($spacing);
+}
+
+@mixin marginY($spacing) {
+  margin-top: rem($spacing);
+  margin-bottom: rem($spacing);
+}
+
+@mixin margin($spacing) {
+  @include marginX;
+  @include marginY;
+}
+
+@mixin autoMargin {
+  margin-left: auto;
+  margin-right: auto;
 }
