--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -14,7 +14,6 @@
   @include desktop {
     position: relative;   
     @include containerMax;
-    @include autoMargin;
   }
 }
 
@@ -31,7 +30,7 @@
   }
 
   @include desktop {
-    @include posCenter;
+    @include posCenterY;
   }
 }
 
