--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,13 +1,2 @@
-@use "./utils" as *;
-
-body {
-  width: rem(240px);
-  background: yellow;
-  @include mobile{
-    background: pink;
-  };
-
-  @include desktop{
-    background: skyblue;
-  };
-}
+@use "base";
+@use "layout";
