padding 관련 믹스인 수정

--- a/src/scss/utils/_mixin.scss
+++ b/src/scss/utils/_mixin.scss
@@ -50,8 +50,8 @@
 
 // padding, margin 관련 믹스인
 @mixin padding($spacing) {
-  @include paddingX;
-  @include paddingY;
+  @include paddingX($spacing);
+  @include paddingY($spacing);
 }
 
 @mixin paddingX($spacing) {
@@ -79,8 +79,8 @@
 }
 
 @mixin margin($spacing) {
-  @include marginX;
-  @include marginY;
+  @include marginX($spacing);
+  @include marginY($spacing);
 }
 
 @mixin autoMargin {
