--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -1,1 +1,46 @@
-// navigation.scss
+@use "./../utils" as *;
+
+// 메인 내비게이션
+.menu {
+  @include mobile {
+    @at-root .is--active &__list {
+      transform: none;
+    }
+
+    &__list {
+      // $color: #f0e68c;
+      background: $accent-opacity-color;
+      // 뷰포트 기준으로 늘어남
+      @include padding(20px);
+      width: 70vw;
+      height: 100vh;
+      position: fixed;
+      left: 0;
+      top: 0;
+      transform: translateX(-150%);
+    }
+
+    &__item {
+      border-bottom: 1px solid #000;
+    }
+  }
+
+  @include desktop {
+    background: $brown;
+
+    @at-root .menu__list {
+      @include flexbox($justify: space-between); 
+      @include containerMax;
+      @include paddingX(4px);
+      @include paddingY(16px);
+      color: $white;
+      font-size: rem(18px);
+      font-weight: 700;
+    }
+  }
+
+  &__link {
+    display: block;
+    @include padding(16px);
+  }
+}
