--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -21,8 +21,8 @@
 
 // 햄버거 버튼
 .button--burger {
-  
   @include mobile {
+    background: transparent;
     width: rem(36px);
     height: rem(36px);
     border: 0;
