WebCafe-Sass 0621 수업 1. 전체 스타일링 pages/_home 2. _mixin에 grid, ratio, 반응형 콘텐츠, textOver, 이미지맞추기 명령어 추가 3. _sprites 모듈화 + 그외 자동화

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,7 +1,6 @@
 @use "./../utils" as *;
 
 .appMain {
-  background: skyblue;
   @include paddingX(20px);
   @include paddingY(16px);
 
@@ -21,6 +20,7 @@
 
 // 메인 콘텐츠 (데스크탑에만 적용)
 @include desktop {
+
   // 추천 서적
   .book {
     grid-area: book;
@@ -46,3 +46,77 @@
     grid-area: twitter;
   }
 }
+
+//추천 서적
+.book {
+  &__cover {
+    width: 70%;
+    @include autoMargin;
+    text-align: center;
+  }
+
+  &__info {
+    @include flexbox($wrap: wrap, $justify: center);
+    column-gap: rem(8px);
+  }
+
+  @at-root .ratingStar {
+    width: 100%;
+    text-align: center;
+    font-size: rem(36px);
+  }
+}
+
+// 새소식
+.news {
+  @at-root .iframeWrapper {
+    @include ratio(16, 9);
+  }
+}
+
+// 게시판
+.board {
+  position: relative;
+
+  &__item {
+    margin: 8px 0;
+    @include flexbox;
+    column-gap: rem(8px);
+  }
+
+  &__link {
+    flex-grow: 1;
+    @include textOver;
+  }
+
+  &__date {
+    /* flex-basis: fill; */
+    white-space: nowrap;
+  }
+
+  &__more {
+    @include posRightTop;
+  }
+}
+
+// 인기 사이트
+.favorite {}
+
+// 트위터
+.twitter {
+  &__userProfile {
+    @include ratio(1, 1);
+  }
+
+  &__userProfileImage {
+    @include respons(width, 100%);
+    border-radius: 50%;
+    @include fit(30%, 40%);
+  }
+}
+
+/*
+        <figure class="twitter__userProfile">
+          <img src="./images/hero.jpg" alt="" class="twitter__userProfileImage" />
+        </figure>
+*/
